# praha-demo

./: .gitignore  CLAUDE.md  README.md
backend/: .env.example  main.py  pyproject.toml
backend/routers/: __init__.py  cycling.py  environment.py  feedback.py  kai.py  map_data.py  overview.py  parking.py  pedestrian.py  query.py  traffic.py
backend/services/: data_loader.py  user_context.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  providers.tsx
frontend/app/(dashboard)/: layout.tsx  page.tsx
frontend/app/(dashboard)/custom/: page.tsx
frontend/app/(dashboard)/cycling/: page.tsx
frontend/app/(dashboard)/feedback/: page.tsx
frontend/app/(dashboard)/map/: page.tsx
frontend/app/(dashboard)/parking/: page.tsx
frontend/app/(dashboard)/pedestrian/: page.tsx
frontend/app/(dashboard)/traffic/: page.tsx
frontend/components/kai/: Chat.tsx
frontend/components/layout/: Header.tsx  NavTabs.tsx  TourGuide.tsx
frontend/components/map/: MapView.tsx
frontend/lib/: api.ts  constants.ts  kai-context.tsx  theme.tsx  tour-context.tsx  tour-steps.ts  types.ts
keboola-config/: setup.sh
keboola-config/nginx/sites/: default.conf
keboola-config/supervisord/services/: node.conf  python.conf
